--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "fs": "0.0.1-security",
     "http-errors": "^2.0.0",
+    "js-file-download": "^0.4.12",
+    "jszip": "^3.10.0",
     "nodemon": "^2.0.19"
   }
 }
